--- a/public/editor.html
+++ b/public/editor.html
@@ -38,6 +38,7 @@
   <!-- Addons -->
   <script src="codemirror/codemirror-5.65.19/addon/edit/closetag.js"></script>
   <script src="codemirror/codemirror-5.65.19/addon/edit/closebrackets.js"></script>
+  <script src="codemirror/codemirror-5.65.19/addon/edit/"></script>
 
   <!-- elpapu -->
   <script src="js/client.js"></script>
